Revision history for Pandoc-Elements

{{$NEXT}}
    - added examples
    - added more accessor methods
    - remove method value

0.04  2014-10-27 14:09:21 CET
    - added accessor methods (issue #1)
    - refactoring

0.03  2014-10-26 20:52:58 CET
    - use blessed objects
    - new methods to_json and from_json
    - added Pandoc::Filter
    - changed calling syntax of Pandoc::Walker

0.02  2014-10-26 10:34:37 CET
    - added Pandoc::Walker
    - new helper method: element

0.01  2014-10-23 21:34:25 CEST
    - initial release