@@ -3,7 +3,7 @@ use strict;
 use warnings;
 use 5.008_005;
 
-our $VERSION = '0.04';
+our $VERSION = '0.05';
 
 our %ELEMENTS = (
     Plain => [ Block => 'content' ],
